@@ -15,7 +15,7 @@ if test "$PHP_MHASH" != "no"; then
   fi
 
   PHP_ADD_INCLUDE($MHASH_DIR/include)
-  PHP_ADD_LIBRARY_WITH_PATH(mhash, $MHASH_DIR/lib, MHASH_SHARED_LIBADD)
+  PHP_ADD_LIBRARY_WITH_PATH(mhash, $MHASH_DIR/$PHP_LIBDIR, MHASH_SHARED_LIBADD)
 
   PHP_NEW_EXTENSION(mhash, mhash.c, $ext_shared)
   PHP_SUBST(MHASH_SHARED_LIBADD)
