@@ -27,7 +27,7 @@ if test "$PHP_TIDY" != "no"; then
     AC_MSG_ERROR(Cannot find libtidy)
   fi
 
-  TIDY_LIBDIR=$TIDY_DIR/lib
+  TIDY_LIBDIR=$TIDY_DIR/$PHP_LIBDIR
 
   PHP_ADD_LIBRARY_WITH_PATH(tidy, $TIDY_LIBDIR, TIDY_SHARED_LIBADD)
   PHP_ADD_INCLUDE($TIDY_INCDIR)
